--- a/package.json
+++ b/package.json
@@ -38,21 +38,17 @@
     "@typescript-eslint/parser": "^5.14.0",
     "c8": "^7.11.0",
     "eslint": "^8.8.0",
-    "fuse.js": "^6.5.3",
+    "fuse.js": "^6.6.2",
     "happy-dom": "^2.31.1",
     "prettier": "2.6.0",
     "shiki": "^0.10.1",
-    "solid-app-router": "^0.2.1",
-    "solid-js": "^1.3.2",
     "solid-transition-group": "0.0.8",
     "tinykeys": "^1.4.0",
     "ts-node": "^10.5.0",
-    "typescript": "^4.6.2",
-    "vite": "^2.7.10",
-    "vite-plugin-solid": "^2.2.1",
-    "vitest": "^0.3.2"
+    "vitest": "^0.23.4"
   },
   "peerDependencies": {
+    "@cn-ui/use": "workspace:",
     "fuse.js": "^6.5.3",
     "solid-js": "^1.3.2",
     "solid-transition-group": "0.0.8",
