--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
   "peerDependencies": {
     "@cn-ui/use": "workspace:",
     "fuse.js": "^6.5.3",
-    "solid-js": "^1.3.2",
+    "solid-js": "workspace:",
     "solid-transition-group": "0.0.8",
     "tinykeys": "^1.4.0"
   },
